# restic-tools

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  DESIGN.md  LICENSE  README.md  pyproject.toml  restic_subset_calculator.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
doc/: SUBSET_CALCULATOR.md  TODO.md
src/restic_tools/: subset_calculator.py
tests/: test_calculator.py  test_integration.py
