[project]
name = "restic-tools"
dynamic = ["version"]
description = "A collection of restic helper tools"
authors = [
    {name = "jfasoc", email = "7720125+jfasoc@users.noreply.github.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
restic-subset-calculator = "restic_tools.subset_calculator:main"

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "pytest-cov>=7.0.0",
    "pytest-bdd",
    "pytest-gremlins",
    "pytest-xdist",
    "ruff>=0.15.6",
    "argcomplete",
    "shtab",
    "commitizen",
    "pre-commit",
]

[tool.pytest.ini_options]
addopts = "--cov=restic_tools --cov-report=term-missing --cov-fail-under=100"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/restic_tools"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "scm"
tag_format = "v$version"
update_changelog_on_bump = true
annotated_tag = true
bump_message = "chore(release): $new_version [skip ci]"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
